tests/errors/arrays/nesting-mismatch-deep.fn
---
Description: Flat array type assigned a nested array
Expected: FN3201, FN3201
---

type Program
{
    static fn Main -> i32
    {
        var d: i32[] = [[1, 2], [3, 4]]
        return 0
    }
}
